# trade4

./: .gitignore  CLAUDE.md  README.md  pip.conf  pyproject.toml  requirements.txt
data/: trade4.duckdb
src/: CLAUDE.md  config.py  main.py
src/ai/: IAi.py
src/brokers/: IBroker.py  __init__.py  broker_longport.py  longport.py
src/core/: __init__.py  ai.py  broker.py  common_dataclasses.py  common_fields.py  data_models.py  market.py
src/docs/: dev-guidelines.md
src/markets/: IMarket.py  __init__.py  cn_market.py  hk_market.py  us_market.py
src/services/: __init__.py  quote_service.py  trade_service.py
src/utils/: __init__.py  duckdb_manager.py  measures.py  typevar.py
