[build-system]
requires = ["setuptools", "wheel"]  
build-backend = "setuptools.build_meta" 

[project]  
name = "trade4"  
version = "0.1.0"  
description = "A sample Python project for trade"  
authors = [  
    { name="Yuri", email="yuri.zhong@outlook.com" }  
]  
license = { file="LICENSE" }  
readme = "README.md"  
requires-python = ">=3.10, <=3.12"  
dependencies = [  
    "python-dotenv >=1.0.1, <3.0",  
    "longport >=2.1.10, <3.0"  
]  
