[build-system]
requires = ["setuptools", "wheel"]  
build-backend = "setuptools.build_meta" 

[project]  
name = "trade4"  
version = "0.1.0"  
description = "A sample Python project for trade"  
authors = [  
    { name="Yuri", email="yuri.zhong@outlook.com" }  
]  
license = { file="LICENSE" }  
readme = "README.md"  
requires-python = ">=3.10, <=3.12"  
dependencies = [  
    "python-dotenv >=1.0.1, <3.0",  
    "longport >=2.1.10, <3.0"  
]  
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # assert 语句在测试中是允许的
